--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,8 @@
-version: '3.8'
-
 services:
   timeout-server:
     build: .
-    ports:
-      - "8080:8080"
-    command: ["./timeout-server", "--port=:8080", "--min-timeout=5s", "--max-timeout=12s", "--enable-metrics=true", "--enable-logging=true"]
-    healthcheck:
-      test: ["CMD", "/bin/sh", "-c", "timeout 1 bash -c 'cat < /dev/null > /dev/tcp/127.0.0.1/8080' || exit 1"]
-      interval: 30s
-      timeout: 3s
-      retries: 3
+    command: ["./timeout-server", "--port=:8080", "--min-timeout=5s", "--max-timeout=12s"]
     restart: unless-stopped
-
     networks:
       proxy:
     labels:
